# sudokusolve

./: Cargo.toml  readme.md  readme.org
src/: cell.rs  main.rs  observer.rs  reader.rs  solver.rs  writer.rs
testdata/: easy  hard  more
