[package]
name = "sudokusolve"
version = "0.1.0"
authors = ["Jonathan Karlsson <karlsjona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
clap = "3.0.0-beta.2"

[profile.release]
debug = true
